--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,12 +3,19 @@
     package="tw.edu.pu.csie.s1063724.smart_gophers">
 
     <application
-        android:label="@string/app_name"
         android:icon="@drawable/three_brother"
+        android:label="@string/app_name"
         android:roundIcon="@drawable/three_brother"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".DescriptActivity"/>
+        <activity android:name=".menuActivity"></activity>
+        <activity android:name=".logoutActivity" />
+        <activity android:name=".GamelistActivity" />
+        <activity android:name=".FruitgameActivity" />
+        <activity android:name=".FruitActivity" />
+        <activity android:name=".ColorgameActivity" />
+        <activity android:name=".ColorActivity" />
+        <activity android:name=".DescriptActivity" />
         <activity android:name=".MainActivity" />
         <activity android:name=".WelcomeActivity">
             <intent-filter>
